Fixing text align

--- a/custom_login/files/styles.css
+++ b/custom_login/files/styles.css
@@ -130,6 +130,7 @@ a:link {
 	padding-left: 20px;
 	padding-right: 20px;
 	line-height: 25px;
+	text-align: left;
 }
 
 .col.rightborder {
